feat: 完成 DeepVision UI/UX 首发收口与验收闭环
交互与可访问性：锁定科技理性预设，移除预设切换入口，补齐弹窗语义与 Tab 焦点闭环，完善 Toast 读屏播报策略。

视觉与主题机制：收敛主题与设计 token 注入链路，统一 light/dark/system 体验与持久化行为。

审查与交付文档：新增审查报告、改造蓝图、视觉系统稿、两周 Backlog、冒烟清单、验收结果与主链路联调证据。

发布收口决策：同步 Week2 延后项与暂停项，明确首发门禁通过条件与后续迭代边界。

--- a/web/help.html
+++ b/web/help.html
@@ -16,6 +16,10 @@
             --accent-weak: rgba(37, 99, 235, 0.08);
             --radius: 12px;
             --maxw: 1180px;
+            --dv-color-brand: #357be2;
+            --dv-color-brand-hover: #2563eb;
+            --dv-color-surface: #ffffff;
+            --dv-color-surface-secondary: #f8fafc;
         }
 
         html[data-theme="dark"] {
@@ -26,6 +30,10 @@
             --line: #313a45;
             --accent: #4c8dff;
             --accent-weak: rgba(76, 141, 255, 0.16);
+            --dv-color-brand: #5c98ff;
+            --dv-color-brand-hover: #78b1ff;
+            --dv-color-surface: #21262d;
+            --dv-color-surface-secondary: #1b1f24;
         }
 
         * { box-sizing: border-box; }
@@ -79,7 +87,7 @@
         }
 .brand-title {
             font-family: 'Outfit', 'Inter', system-ui, sans-serif;
-            background: linear-gradient(135deg, #171717 0%, #404040 50%, #525252 100%);
+            background: linear-gradient(135deg, var(--dv-color-brand) 0%, #404040 50%, #525252 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -87,7 +95,7 @@
             letter-spacing: -0.03em;
         }
         .brand-title-cn {
-            color: #0f172a;
+            color: var(--text);
             font-family: 'ZCOOL XiaoWei', serif;
             font-weight: 600;
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
