--- a/web/index.html
+++ b/web/index.html
@@ -757,14 +757,14 @@
                                         :class="getSessionStatusCount('pending_review') > 0
                                             ? (sessionStatusFilter === 'pending_review'
                                                 ? 'bg-amber-500 text-white'
-                                                : 'bg-amber-50 text-amber-700 hover:bg-amber-100')
+                                                : 'bg-amber-100 text-amber-700 border border-amber-200 hover:bg-amber-50')
                                             : (sessionStatusFilter === 'pending_review'
                                                 ? 'bg-primary text-white'
                                                 : 'bg-gray-100 text-secondary hover:bg-gray-200')"
-                                        class="px-3 py-2 text-xs font-medium rounded-lg transition-colors cursor-pointer whitespace-nowrap flex items-center gap-1.5">
+                                        class="px-3 py-2 text-xs font-semibold rounded-lg transition-colors cursor-pointer whitespace-nowrap flex items-center gap-1.5">
                                     待确认
                                     <span x-show="getSessionStatusCount('pending_review') > 0"
-                                          class="inline-flex items-center justify-center min-w-[20px] h-5 px-1.5 rounded-full text-[11px] font-semibold bg-white border border-amber-200 text-amber-700"
+                                          class="inline-flex items-center justify-center min-w-[20px] h-5 px-1.5 rounded-full text-[11px] font-semibold bg-white border border-amber-200 text-amber-700 shadow-sm"
                                           x-text="getSessionStatusCount('pending_review')"></span>
                                 </button>
                                 <button @click="sessionStatusFilter = 'completed'; filterSessions()"
