修复面试评估场景 AI 推荐残留展示
逻辑修复：评估场景下禁用 AI 推荐归一化、推荐匹配与一键采纳入口。

界面修复：选项侧 AI 推荐标签增加评估场景保护条件，避免误导性标识残留。

--- a/web/index.html
+++ b/web/index.html
@@ -1661,7 +1661,7 @@
                                                         </div>
                                                     </template>
                                                     <span class="font-medium" x-text="option"></span>
-                                                    <span x-show="isOptionRecommended(option)"
+                                                    <span x-show="!isAssessmentSession() && isOptionRecommended(option)"
                                                           class="ml-1 tag-pill tag-pill--xs">AI 推荐</span>
                                                 </div>
                                             </div>
