feat: 升级报告生成进度反馈体验
后端：新增报告生成阶段状态追踪与进度查询接口

前端：生成/重新生成按钮接入平滑进度与百分比展示

交互：移除独立状态面板，改为按钮内嵌进度条反馈

适配：新增超窄屏文案兜底，避免按钮文本截断

--- a/web/index.html
+++ b/web/index.html
@@ -1837,31 +1837,47 @@
                                                 </svg>
                                                 查看最新报告
                                             </button>
-                                            <button @click="generateReport()"
+                                            <button @click="generateReport('regenerate')"
                                                     :disabled="isGeneratingCurrentReport()"
-                                                    :class="isGeneratingCurrentReport() ? 'report-action-disabled cursor-wait' : 'report-action-secondary cursor-pointer'"
-                                                    class="px-8 py-2.5 rounded-lg font-medium transition-colors duration-200 flex items-center justify-center gap-2 w-full sm:w-auto">
-                                                重新生成访谈报告
+                                                    :class="isGeneratingCurrentReport() ? 'report-action-progressing cursor-wait' : 'report-action-secondary cursor-pointer'"
+                                                    class="report-action-progress-shell px-8 py-2.5 rounded-lg font-medium transition-colors duration-200 w-full sm:w-auto relative overflow-hidden">
+                                                <template x-if="isGeneratingCurrentReport()">
+                                                    <span class="report-action-progress-fill" :style="getReportGenerationButtonProgressStyle()" aria-hidden="true"></span>
+                                                </template>
+                                                <span class="report-action-progress-content report-action-progress-text flex items-center justify-center gap-2">
+                                                    <template x-if="isGeneratingCurrentReport()">
+                                                        <svg class="w-5 h-5 animate-spin motion-reduce:animate-none" fill="none" viewBox="0 0 24 24">
+                                                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"/>
+                                                            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4z"/>
+                                                        </svg>
+                                                    </template>
+                                                    <span x-text="getReportGenerationButtonText('regenerate')"></span>
+                                                </span>
                                             </button>
                                         </div>
                                     </template>
                                     <template x-if="currentSession.status !== 'completed'">
-                                        <button @click="generateReport()"
+                                        <button @click="generateReport('generate')"
                                                 :disabled="isGeneratingCurrentReport()"
-                                                :class="isGeneratingCurrentReport() ? 'report-action-generate-running cursor-wait' : 'report-action-generate cursor-pointer'"
-                                                class="px-8 py-2.5 rounded-lg font-medium transition-colors duration-200 flex items-center justify-center gap-2 w-full sm:w-auto">
+                                                :class="isGeneratingCurrentReport() ? 'report-action-progressing cursor-wait' : 'report-action-generate cursor-pointer'"
+                                                class="report-action-progress-shell px-8 py-2.5 rounded-lg font-medium transition-colors duration-200 w-full sm:w-auto relative overflow-hidden">
                                             <template x-if="isGeneratingCurrentReport()">
-                                                <svg class="w-5 h-5 animate-spin" fill="none" viewBox="0 0 24 24">
-                                                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"/>
-                                                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4z"/>
-                                                </svg>
+                                                <span class="report-action-progress-fill" :style="getReportGenerationButtonProgressStyle()" aria-hidden="true"></span>
                                             </template>
-                                            <template x-if="!isGeneratingCurrentReport()">
-                                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
-                                                </svg>
-                                            </template>
-                                            <span x-text="isGeneratingCurrentReport() ? '正在生成访谈报告...' : '生成访谈报告'"></span>
+                                                <span class="report-action-progress-content report-action-progress-text flex items-center justify-center gap-2">
+                                                <template x-if="isGeneratingCurrentReport()">
+                                                    <svg class="w-5 h-5 animate-spin motion-reduce:animate-none" fill="none" viewBox="0 0 24 24">
+                                                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"/>
+                                                        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4z"/>
+                                                    </svg>
+                                                </template>
+                                                <template x-if="!isGeneratingCurrentReport()">
+                                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
+                                                    </svg>
+                                                </template>
+                                                <span x-text="getReportGenerationButtonText('generate')"></span>
+                                            </span>
                                         </button>
                                     </template>
                                 </div>
