--- a/web/index.html
+++ b/web/index.html
@@ -2097,17 +2097,17 @@
                                 </button>
                                 <div class="flex flex-col sm:flex-row gap-2 w-full sm:w-auto">
                                     <div class="flex flex-col gap-1 w-full sm:w-auto" x-show="isPresentationEnabled()">
-                                        <button @click="(generatingSlides || presentationPolling) ? stopPresentationGeneration() : generatePresentation()"
+                                        <button @click="isPresentationGeneratingCurrentReport() ? stopPresentationGeneration() : generatePresentation()"
                                                 x-show="!presentationPdfUrl"
-                                                :class="(generatingSlides || presentationPolling) ? 'report-action-generate-progressing cursor-wait' : 'report-action-generate cursor-pointer'"
+                                                :class="isPresentationGeneratingCurrentReport() ? 'report-action-generate-progressing cursor-wait' : 'report-action-generate cursor-pointer'"
                                                 class="report-action-progress-shell px-4 py-2 rounded-lg text-sm font-medium transition-colors w-full sm:w-auto relative overflow-hidden"
-                                                :aria-busy="(generatingSlides || presentationPolling) ? 'true' : 'false'">
-                                            <span x-show="generatingSlides || presentationPolling" class="report-action-progress-fill" :style="getPresentationGenerationButtonProgressStyle()" aria-hidden="true"></span>
+                                                :aria-busy="isPresentationGeneratingCurrentReport() ? 'true' : 'false'">
+                                            <span x-show="isPresentationGeneratingCurrentReport()" class="report-action-progress-fill" :style="getPresentationGenerationButtonProgressStyle()" aria-hidden="true"></span>
                                             <span class="report-action-progress-content flex items-center justify-center gap-2 leading-5">
-                                                <svg x-show="!generatingSlides && !presentationPolling" class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                <svg x-show="!isPresentationGeneratingCurrentReport()" class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h18v12H3V3zm0 12l4 6h10l4-6M9 9h6M9 12h6"/>
                                                 </svg>
-                                                <svg x-show="generatingSlides || presentationPolling" class="w-4 h-4 animate-spin" fill="none" viewBox="0 0 24 24">
+                                                <svg x-show="isPresentationGeneratingCurrentReport()" class="w-4 h-4 animate-spin" fill="none" viewBox="0 0 24 24">
                                                     <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                                                     <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"></path>
                                                 </svg>
@@ -2115,7 +2115,7 @@
                                             </span>
                                         </button>
                                     </div>
-                                    <button x-show="isPresentationEnabled() && presentationPdfUrl && !generatingSlides"
+                                    <button x-show="isPresentationEnabled() && presentationPdfUrl && !isPresentationGeneratingCurrentReport()"
                                             @click="openPresentationPdf()"
                                             class="report-action-secondary px-4 py-2 rounded-lg text-sm font-medium transition-colors cursor-pointer flex items-center justify-center gap-2 w-full sm:w-auto">
                                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
