--- a/web/index.html
+++ b/web/index.html
@@ -1357,9 +1357,9 @@
                         <template x-if="currentStep === 1 && loadingQuestion">
                             <div class="bg-surface border border-border rounded-xl p-6">
                                 <!-- 左右分栏布局 -->
-                                <div class="flex flex-col lg:flex-row gap-6 items-start">
+                                <div class="flex flex-col sm:flex-row gap-6 items-start">
                                     <!-- 左侧：三阶段进度条 -->
-                                    <div class="flex-1 flex items-center justify-center py-4">
+                                    <div class="min-w-0 flex-1 flex items-center justify-center py-4">
                                         <div class="flex flex-col items-center">
                                         <!-- 进度阶段可视化 -->
                                         <div class="flex items-center justify-center mb-6">
@@ -1422,10 +1422,10 @@
                                     </div>
 
                                     <!-- 分隔线 -->
-                                    <div class="hidden lg:block w-px bg-gray-200 self-stretch"></div>
+                                    <div class="hidden sm:block w-px bg-gray-200 self-stretch"></div>
 
                                     <!-- 右侧：处理步骤 -->
-                                    <div class="lg:w-64">
+                                    <div class="sm:w-64 sm:shrink-0">
                                         <div class="bg-gray-50 rounded-lg p-4">
                                             <div class="text-xs text-muted mb-3 font-medium">处理步骤</div>
                                             <div class="space-y-2">
@@ -1595,21 +1595,24 @@
                                                     </template>
                                                 </div>
                                                 <button @click="aiRecommendationExpanded = !aiRecommendationExpanded"
-                                                        class="text-xs text-[#357BE2] hover:text-[#2c6bd1] transition-colors">
+                                                        class="shrink-0 whitespace-nowrap text-xs text-[#357BE2] hover:text-[#2c6bd1] transition-colors">
                                                     <span x-text="aiRecommendationExpanded ? '收起理由' : '查看理由'"></span>
                                                 </button>
                                             </div>
-                                            <div class="flex items-center justify-between gap-4 mt-3">
-                                                <div class="min-w-0">
-                                                    <div class="text-sm font-semibold text-primary" x-text="getAiRecommendationDisplayOptions().join('、')"></div>
-                                                    <div class="text-xs text-muted mt-1"
+                                            <div class="flex items-center justify-between gap-3 mt-3 min-w-0">
+                                                <div class="min-w-0 flex-1">
+                                                    <div class="text-sm font-semibold text-primary truncate"
+                                                         :title="getAiRecommendationDisplayOptions().join('、')"
+                                                         x-text="getAiRecommendationDisplayOptions().join('、')"></div>
+                                                    <div class="text-xs text-muted mt-1 truncate"
+                                                         :title="currentQuestion.aiRecommendation.summary || '基于已收集的回答，AI 倾向该选项'"
                                                          x-text="currentQuestion.aiRecommendation.summary || '基于已收集的回答，AI 倾向该选项'"></div>
                                                     <template x-if="aiRecommendationApplied">
                                                         <div class="text-[11px] text-gray-500 mt-1.5">已采纳 AI 推荐</div>
                                                     </template>
                                                 </div>
                                                 <button @click="aiRecommendationApplied ? revertAiRecommendation() : applyAiRecommendation()"
-                                                        class="px-3 py-1.5 text-xs font-medium rounded-lg bg-[#357BE2] text-white hover:bg-[#2c6bd1] transition-colors">
+                                                        class="inline-flex min-w-[84px] items-center justify-center shrink-0 whitespace-nowrap px-3 py-1.5 text-xs font-medium rounded-lg bg-[#357BE2] text-white hover:bg-[#2c6bd1] transition-colors">
                                                     <span x-text="aiRecommendationApplied ? '撤回推荐' : '一键采纳'"></span>
                                                 </button>
                                             </div>
@@ -1687,15 +1690,34 @@
                                                         </svg>
                                                     </div>
                                                 </template>
-                                                <span class="font-medium">补充你的想法</span>
+                                                <span class="font-medium">其他（自由输入）</span>
                                             </div>
                                             <textarea x-ref="otherInput"
                                                    x-show="otherSelected"
                                                    x-model="otherAnswerText"
-                                                   @focus="clearAiRecommendationApplied(); otherSelected = true; if (!currentQuestion.multiSelect) { selectedAnswers = []; }"
-                                                   placeholder="你的想法对访谈至关重要"
+                                                   @focus="clearAiRecommendationApplied(); resetSingleSelectDisambiguation(); otherSelected = true; if (!currentQuestion.multiSelect) { selectedAnswers = []; }"
+                                                   @input="singleSelectDisambiguationActive && resetSingleSelectDisambiguation()"
+                                                   placeholder="可自由输入，也可填“1、2 / 第一个和第二个 / 以上所有”引用上方选项"
                                                    rows="3"
                                                    class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-cta/50 focus:border-cta resize-y min-h-[80px]"></textarea>
+                                            <div x-show="singleSelectDisambiguationActive"
+                                                 class="mt-3 rounded-lg border border-amber-300 bg-amber-50 px-3 py-2 text-xs text-amber-900">
+                                                <p class="font-medium">本题为单选，检测到你引用了多个选项：</p>
+                                                <p class="mt-1" x-text="singleSelectDisambiguationOptions.join('、')"></p>
+                                                <div class="mt-2 flex flex-wrap items-center gap-2">
+                                                    <template x-for="(option, idx) in singleSelectDisambiguationOptions" :key="idx">
+                                                        <button type="button"
+                                                                @click="chooseSingleSelectDisambiguation(option)"
+                                                                class="report-action-secondary px-2.5 py-1 rounded-md text-xs font-medium transition-colors cursor-pointer"
+                                                                x-text="`选为主：${option}`"></button>
+                                                    </template>
+                                                    <button type="button"
+                                                            @click="continueSingleSelectWithCustomText()"
+                                                            class="report-action-tertiary px-2.5 py-1 rounded-md text-xs font-medium transition-colors cursor-pointer">
+                                                        我再补充原因
+                                                    </button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
 
