feat: 浅色模式补充品牌眼睛呼吸动效
- 样式：为 Logo 眼睛增加浅色模式待机呼吸动画与中心缩放基点。

- 交互：仅在非联网搜索状态启用浅色动效，保持搜索态动画优先。

- 可访问性：在 reduced-motion 场景下关闭浅色待机动画。

--- a/web/index.html
+++ b/web/index.html
@@ -63,6 +63,20 @@
         }
         .logo-icon {
             filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.15));
+            transform-origin: center;
+        }
+        @keyframes logo-idle-light {
+            0%, 100% {
+                transform: scale(1);
+                filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.15));
+            }
+            50% {
+                transform: scale(1.04);
+                filter: drop-shadow(0 4px 14px rgba(53, 123, 226, 0.28));
+            }
+        }
+        html[data-theme="light"] .logo-icon:not(.logo-searching) {
+            animation: logo-idle-light 2.8s ease-in-out infinite;
         }
         @keyframes pulse-ring {
             0% { transform: scale(0.95); opacity: 0.7; }
@@ -121,6 +135,9 @@
         }
         @media (prefers-reduced-motion: reduce) {
             .binary-rail::before {
+                animation: none;
+            }
+            html[data-theme="light"] .logo-icon:not(.logo-searching) {
                 animation: none;
             }
         }
