--- a/web/index.html
+++ b/web/index.html
@@ -1374,9 +1374,9 @@
                         <template x-if="currentStep === 1 && loadingQuestion">
                             <div class="bg-surface border border-border rounded-xl p-6">
                                 <!-- 左右分栏布局 -->
-                                <div class="flex flex-col sm:flex-row gap-6 items-start">
+                                <div class="flex flex-col xl:flex-row gap-6 items-center xl:items-start">
                                     <!-- 左侧：三阶段进度条 -->
-                                    <div class="min-w-0 flex-1 flex items-center justify-center py-4">
+                                    <div class="w-full min-w-0 xl:flex-1 flex items-center justify-center py-4">
                                         <div class="flex flex-col items-center">
                                         <!-- 进度阶段可视化 -->
                                         <div class="flex items-center justify-center mb-6">
@@ -1439,10 +1439,10 @@
                                     </div>
 
                                     <!-- 分隔线 -->
-                                    <div class="hidden sm:block w-px bg-gray-200 self-stretch"></div>
+                                    <div class="hidden xl:block w-px bg-gray-200 self-stretch"></div>
 
                                     <!-- 右侧：处理步骤 -->
-                                    <div class="sm:w-64 sm:shrink-0">
+                                    <div class="w-full max-w-2xl mx-auto xl:mx-0 xl:max-w-none xl:w-64 xl:shrink-0">
                                         <div class="bg-gray-50 rounded-lg p-4">
                                             <div class="text-xs text-muted mb-3 font-medium">处理步骤</div>
                                             <div class="space-y-2">
